--- a/package.json
+++ b/package.json
@@ -9,16 +9,43 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.2",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "graphql": "^16.6.0",
+    "jose": "^4.13.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "next": "12.2.5",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "react-hooks-global-state": "^2.0.0",
+    "react-query": "^3.39.2",
+    "styled-components": "^5.3.6",
+    "tailwindcss": "^3.1.8",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/lodash": "^4.14.186",
     "@types/node": "18.7.14",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.12",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.17",
     "typescript": "4.8.2"
   }
 }
