--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "graphql": "^16.6.0",
     "jose": "^4.13.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "next": "12.2.5",
@@ -30,6 +31,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.7.14",
