--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "^3.8.3",
+    "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
@@ -19,14 +20,14 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "12.2.5",
+    "next": "^13.4.19",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-hooks-global-state": "^2.0.0",
     "react-query": "^3.39.2",
-    "styled-components": "^5.3.6",
+    "styled-components": "^6.0.7",
     "tailwindcss": "^3.1.8",
     "zustand": "^4.3.2"
   },
