--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@apollo/client": "^3.8.3",
     "@apollo/experimental-nextjs-app-support": "^0.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
@@ -36,19 +35,20 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.186",
     "@types/node": "18.7.14",
-    "@types/react": "18.0.18",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.31.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "^13.4.19",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.17",
-    "typescript": "4.8.2"
+    "typescript": "^5.2.2"
   }
 }
