--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.36.1",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.46.2",
     "react-hooks-global-state": "^2.0.0",
     "react-query": "^3.39.2",
     "styled-components": "^6.0.7",
