--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "sort-keys": ["warn", "asc", { "caseSensitive": true, "natural": false }],
+    "@next/next/no-img-element": "off",
     "sort-imports-es6-autofix/sort-imports-es6": [
       2,
       {
