--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "classnames": "^2.3.2",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "graphql": "^16.8.1",
+    "html-react-parser": "^4.2.2",
     "jose": "^4.13.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "next": "^13.5.3",
+    "next": "^13.5.4",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
