--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
   "rules": {
     // I suggest you add those two rules:
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "sort-keys": ["warn", "asc", { "caseSensitive": true, "natural": false }],
     "@next/next/no-img-element": "off",
     "sort-imports-es6-autofix/sort-imports-es6": [
