--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "axios": "^0.27.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "graphql": "^16.8.1",
     "html-react-parser": "^4.2.2",
